--- a/index.yaml
+++ b/index.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 entries:
-  nginx-ingress/nginx-ingress:
+  nginx-ingress:
   - apiVersion: v1
     appVersion: 0.32.0
     created: 2020-05-22T03:27:38.953143286Z
@@ -22,10 +22,10 @@ entries:
     sources:
     - https://github.com/kubernetes/ingress-nginx
     urls:
-    - nginx-ingress-1.37.0.tgz
+    - nginx-ingress/nginx-ingress-1.37.0.tgz
     version: 1.37.0
 entries:
-  wordpress/wordpress:
+  wordpress:
   - apiVersion: v1
     appVersion: 6.3.2
     created: 2020-05-22T03:28:03.155928075Z
@@ -47,6 +47,6 @@ entries:
     sources:
     - https://github.com/bitnami/bitnami-docker-wordpress
     urls:
-    - wordpress-9.0.3.tgz
+    - wordpress/wordpress-9.0.3.tgz
     version: 9.0.3
 generated: 2020-05-22T03:27:38.949510299Z
